all tests passed with anonymizer funcs added to datafog class

--- a/examples/image_processing.ipynb
+++ b/examples/image_processing.ipynb
@@ -76,7 +76,7 @@
     "import nest_asyncio\n",
     "nest_asyncio.apply()\n",
     "from datafog import DataFog\n",
-    "client = DataFog(operations=\"extract_text\")"
+    "client = DataFog(operations=\"extract\")"
    ]
   },
   {
