--- a/examples/text_annotation_example.ipynb
+++ b/examples/text_annotation_example.ipynb
@@ -49,7 +49,7 @@
    "source": [
     "from datafog import DataFog\n",
     "\n",
-    "client = DataFog(operations=\"annotate_pii\")\n"
+    "client = DataFog(operations=\"scan\")\n"
    ]
   },
   {
